Esport Navbar Collapse fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,11 @@ body::-webkit-scrollbar {
   height: 82px;
 }
 
+.na {
+  background-color: white;
+  text-align: center;
+}
+
 .nav-link {
   font-size: 20px;
   background-color: white;
